--- a/Rainbow/Views/Base.lproj/Main.storyboard
+++ b/Rainbow/Views/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Colors Table View Controller-->
         <scene sceneID="iO9-Qz-9iT">
             <objects>
-                <tableViewController id="6Hf-ix-bHE" sceneMemberID="viewController">
+                <tableViewController id="6Hf-ix-bHE" customClass="ColorsTableViewController" customModule="Rainbow" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ILF-H3-LVl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -33,7 +33,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="CY2-I1-QXb" kind="show" id="BsW-oc-UnF"/>
+                                    <segue destination="CY2-I1-QXb" kind="show" identifier="ToDetailSegue" id="BsW-oc-UnF"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
