--- a/Rainbow/Views/Base.lproj/Main.storyboard
+++ b/Rainbow/Views/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Colors Table View Controller-->
+        <!--Rainbow-->
         <scene sceneID="iO9-Qz-9iT">
             <objects>
                 <tableViewController id="6Hf-ix-bHE" customClass="ColorsTableViewController" customModule="Rainbow" customModuleProvider="target" sceneMemberID="viewController">
@@ -42,7 +42,7 @@
                             <outlet property="delegate" destination="6Hf-ix-bHE" id="4vN-sn-bOf"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="q2c-Il-rwB"/>
+                    <navigationItem key="navigationItem" title="Rainbow" id="q2c-Il-rwB"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dGw-bQ-ujC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -69,8 +69,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UjF-Bf-7Bm" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ODH-ie-DjN">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="ODH-ie-DjN">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
